feat : load colors from database